@@ -1,17 +1,23 @@
 package com.helloai.api.controller;
 
+import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
+import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
+import com.helloai.api.dto.PageResult;
+import com.helloai.api.dto.subtask.CreateSubTaskRequest;
+import com.helloai.api.dto.subtask.ReassignRequest;
+import com.helloai.api.dto.subtask.ReworkRequest;
+import com.helloai.api.dto.subtask.SubTaskResponse;
 import com.helloai.common.base.R;
 import com.helloai.common.constant.SubTaskStatus;
-import com.helloai.api.dto.ChangeStatusRequest;
-import com.helloai.api.dto.SubTaskDTO;
 import com.helloai.core.entity.SubTask;
 import com.helloai.core.service.SubTaskService;
+import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
 @Slf4j
 @RestController
@@ -21,37 +27,71 @@ public class SubTaskController {
 
     private final SubTaskService subTaskService;
 
-    @PostMapping("/change-status")
-    public R<Void> changeStatus(@RequestBody ChangeStatusRequest request) {
-        SubTaskStatus newStatus = SubTaskStatus.valueOf(request.getNewStatus().toUpperCase());
-        subTaskService.changeStatus(request.getSubTaskId(), newStatus, request.getAgentId());
-        log.info("状态变更: subTaskId={}, newStatus={}", request.getSubTaskId(), newStatus);
-        return R.ok();
-    }
-
-    @GetMapping("/{id}")
-    public R<SubTaskDTO> getById(@PathVariable Long id) {
-        SubTask subTask = subTaskService.getById(id);
-        if (subTask == null) {
-            return R.fail("子任务不存在");
+    @PostMapping
+    public R<SubTaskResponse> create(@Valid @RequestBody CreateSubTaskRequest req) {
+        SubTask subTask = new SubTask();
+        subTask.setTaskId(req.getTaskId());
+        subTask.setModuleId(req.getModuleId());
+        subTask.setTitle(req.getTitle());
+        subTask.setContent(req.getDescription());
+        subTask.setDeliverable(req.getDeliverable());
+        subTask.setAcceptance(req.getAcceptance());
+        subTask.setPriority(req.getPriority() != null ? req.getPriority() : "MEDIUM");
+        if (req.getAssignedAgent() != null) {
+            subTask.setStatus(SubTaskStatus.ASSIGNED);
+            subTask.setAssignedAgent(req.getAssignedAgent());
+        } else {
+            subTask.setStatus(SubTaskStatus.PENDING);
         }
-        return R.ok(toDTO(subTask));
+        subTaskService.save(subTask);
+        log.info("子任务创建: id={}, title={}, taskId={}", subTask.getId(), req.getTitle(), req.getTaskId());
+        return R.ok(toResponse(subTask));
     }
 
     @GetMapping
-    public R<List<SubTaskDTO>> list(@RequestParam(required = false) String status) {
-        List<SubTask> list;
-        if (status != null && !status.isBlank()) {
-            list = subTaskService.lambdaQuery()
-                    .eq(SubTask::getStatus, SubTaskStatus.valueOf(status.toUpperCase()))
-                    .orderByDesc(SubTask::getCreateTime)
-                    .list();
-        } else {
-            list = subTaskService.lambdaQuery()
-                    .orderByDesc(SubTask::getCreateTime)
-                    .list();
+    public R<List<SubTaskResponse>> list(
+            @RequestParam(required = false) Long taskId,
+            @RequestParam(required = false) String status,
+            @RequestParam(required = false) Long assignedAgent) {
+        var wrapper = new LambdaQueryWrapper<SubTask>()
+                .eq(taskId != null, SubTask::getTaskId, taskId)
+                .eq(status != null && !status.isBlank(), SubTask::getStatus, SubTaskStatus.valueOf(status))
+                .eq(assignedAgent != null, SubTask::getAssignedAgent, assignedAgent)
+                .orderByDesc(SubTask::getCreateTime);
+        List<SubTaskResponse> list = subTaskService.list(wrapper).stream().map(this::toResponse).toList();
+        return R.ok(list);
+    }
+
+    @GetMapping("/{id}")
+    public R<SubTaskResponse> getById(@PathVariable Long id) {
+        SubTask subTask = subTaskService.getById(id);
+        if (subTask == null) return R.fail("子任务不存在");
+        return R.ok(toResponse(subTask));
+    }
+
+    /**
+     * 通用状态变更（前端兼容）
+     */
+    @PostMapping("/change-status")
+    public R<Void> changeStatus(@RequestBody Map<String, Object> body) {
+        Long subTaskId = Long.valueOf(body.get("subTaskId").toString());
+        String newStatus = (String) body.get("newStatus");
+        // 委托给对应的 action 方法
+        switch (SubTaskStatus.valueOf(newStatus)) {
+            case ASSIGNED -> {
+                Object agentId = body.get("agentId");
+                if (agentId != null) {
+                    subTaskService.claim(subTaskId, Long.valueOf(agentId.toString()));
+                }
+            }
+            case IN_PROGRESS -> subTaskService.start(subTaskId);
+            case REVIEW -> subTaskService.submit(subTaskId);
+            case BLOCKED -> subTaskService.block(subTaskId);
+            case DONE -> subTaskService.complete(subTaskId);
+            case CANCELLED -> subTaskService.cancel(subTaskId);
+            default -> log.warn("不支持的 change-status 操作: {}", newStatus);
         }
-        return R.ok(list.stream().map(this::toDTO).collect(Collectors.toList()));
+        return R.ok();
     }
 
     @PostMapping("/{id}/claim")
@@ -72,6 +112,18 @@ public class SubTaskController {
         return R.ok();
     }
 
+    @PostMapping("/{id}/complete")
+    public R<Void> complete(@PathVariable Long id) {
+        subTaskService.complete(id);
+        return R.ok();
+    }
+
+    @PostMapping("/{id}/rework")
+    public R<Void> rework(@PathVariable Long id, @RequestBody ReworkRequest req) {
+        subTaskService.rework(id, req.getReworkAgentId());
+        return R.ok();
+    }
+
     @PostMapping("/{id}/block")
     public R<Void> block(@PathVariable Long id) {
         subTaskService.block(id);
@@ -79,42 +131,49 @@ public class SubTaskController {
     }
 
     @PostMapping("/{id}/reassign")
-    public R<Void> reassign(@PathVariable Long id, @RequestParam Long newAgentId) {
-        subTaskService.reassign(id, newAgentId);
+    public R<Void> reassign(@PathVariable Long id, @Valid @RequestBody ReassignRequest req) {
+        subTaskService.reassign(id, req.getAgentId());
         return R.ok();
     }
 
-    @GetMapping("/mine")
-    public R<List<SubTaskDTO>> mine(@RequestParam Long agentId) {
-        List<SubTask> list = subTaskService.lambdaQuery()
-                .eq(SubTask::getAssignedAgent, agentId)
-                .orderByDesc(SubTask::getCreateTime)
-                .list();
-        return R.ok(list.stream().map(this::toDTO).collect(Collectors.toList()));
-    }
-
+    /**
+     * 获取可认领的子任务列表
+     */
     @GetMapping("/available")
-    public R<List<SubTaskDTO>> available() {
-        List<SubTask> list = subTaskService.lambdaQuery()
-                .eq(SubTask::getStatus, SubTaskStatus.PENDING)
-                .orderByDesc(SubTask::getCreateTime)
-                .list();
-        return R.ok(list.stream().map(this::toDTO).collect(Collectors.toList()));
+    public R<List<SubTaskResponse>> available() {
+        List<SubTask> list = subTaskService.list(
+                new LambdaQueryWrapper<SubTask>()
+                        .eq(SubTask::getStatus, SubTaskStatus.PENDING)
+                        .orderByDesc(SubTask::getCreateTime));
+        return R.ok(list.stream().map(this::toResponse).toList());
     }
 
-    private SubTaskDTO toDTO(SubTask subTask) {
-        SubTaskDTO dto = new SubTaskDTO();
-        dto.setId(subTask.getId());
-        dto.setTaskId(subTask.getTaskId());
-        dto.setModuleId(subTask.getModuleId());
-        dto.setTitle(subTask.getTitle());
-        dto.setStatus(subTask.getStatus() != null ? subTask.getStatus().name() : null);
-        dto.setAssignedAgent(subTask.getAssignedAgent());
-        dto.setContent(subTask.getContent());
-        dto.setCompositeScore(subTask.getCompositeScore());
-        dto.setScoreGrade(subTask.getScoreGrade());
-        dto.setCreateTime(subTask.getCreateTime() != null ? subTask.getCreateTime().toString() : null);
-        dto.setUpdateTime(subTask.getUpdateTime() != null ? subTask.getUpdateTime().toString() : null);
-        return dto;
+    @GetMapping("/mine")
+    public R<List<SubTaskResponse>> mine(@RequestParam Long agentId) {
+        var wrapper = new LambdaQueryWrapper<SubTask>()
+                .eq(SubTask::getAssignedAgent, agentId)
+                .orderByDesc(SubTask::getCreateTime);
+        List<SubTaskResponse> list = subTaskService.list(wrapper).stream().map(this::toResponse).toList();
+        return R.ok(list);
+    }
+
+    private SubTaskResponse toResponse(SubTask subTask) {
+        SubTaskResponse response = new SubTaskResponse();
+        response.setId(subTask.getId());
+        response.setTaskId(subTask.getTaskId());
+        response.setModuleId(subTask.getModuleId());
+        response.setTitle(subTask.getTitle());
+        response.setDeliverable(subTask.getDeliverable());
+        response.setAcceptance(subTask.getAcceptance());
+        response.setPriority(subTask.getPriority());
+        response.setStatus(subTask.getStatus());
+        response.setAssignedAgent(subTask.getAssignedAgent());
+        response.setContent(subTask.getContent());
+        response.setReworkCount(subTask.getReworkCount());
+        response.setDeadline(subTask.getDeadline());
+        response.setCompletedAt(subTask.getCompletedAt());
+        response.setCreateTime(subTask.getCreateTime());
+        response.setUpdateTime(subTask.getUpdateTime());
+        return response;
     }
 }
